# trading-skills

docs/: roadmap-auto-trading.md
scripts/: deploy.sh
scripts/windows/: README.md  bootstrap.ps1  nightly-restart.ps1  post-deploy.ps1
skills/auto-trading-loop/: SKILL.md
skills/miniqmt-cli/: SKILL.md
skills/miniqmt-http-api/: SKILL.md
skills/trading-analysis/: SKILL.md
tests/fakes/: xtquant_stub.py
tests/miniqmt_cli/: conftest.py  test_audit.py  test_cli_commands.py  test_config.py  test_health.py  test_order_lifecycle.py  test_output.py  test_risk.py  test_routes_data.py  test_routes_risk.py  test_routes_stream.py  test_routes_trade.py  test_session_lock.py  test_session_risk.py  test_setup_wizard.py  test_xt_call.py  test_xtquant_loader.py
tests/trading_analysis/: test_datasource.py  (+2 more)
tools/miniqmt_cli/: README.md  pyproject.toml
tools/miniqmt_cli/src/miniqmt_cli/: __main__.py  client_config.py  main.py  output.py  server_config.py
tools/miniqmt_cli/src/miniqmt_cli/client/: errors.py  transport.py
tools/miniqmt_cli/src/miniqmt_cli/commands/: account.py  config_cmd.py  instrument.py  kline.py  order.py  risk.py  sector.py  server.py  setup.py  stream.py  tick.py  ticks.py
tools/miniqmt_cli/src/miniqmt_cli/server/: _xt_call.py  app.py  audit.py  risk.py  routes_data.py  routes_risk.py  routes_stream.py  routes_trade.py  session.py  watchdog.py  xtdata_adapter.py  xtquant_loader.py  xttrader_adapter.py
tools/trading_analysis/: pyproject.toml
tools/trading_analysis/src/trading_analysis/: cli.py  datasource.py  moneyflow.py  output.py  signals.py
(+8 files in other folders)
