[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pandas>=2.0",
    "miniqmt-cli",
]

[project.scripts]
trading-analysis = "trading_analysis.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
